Updated dependencies. Tests work again. Cosmetics, fixed warnings.